2009-04-06  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #492329
	* expression.cs (New): Load variable when assigning type parameter
	to ref variable.

2009-04-06  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #488960
	* decl.cs: Compare MVAR types using non-null values.

2009-03-27  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, expression.cs: Removed unused nullable checks.

2009-03-27  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Removed some gmcs conditionals.

2009-03-26  Marek Safar  <marek.safar@gmail.com>

	* generic.cs, support.cs: Moved generics stuff out of support.cs

2009-03-24  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs, expression.cs: Use queried type for MethodGroupExpr
	DeclaringType.

2009-03-23  Marek Safar  <marek.safar@gmail.com>

	* attribute.cs: Consider all members for error reporting when
	checking named arguments.

2009-03-23  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #487625
	* namespace.cs: Use a warning for all predefined type conflicts.

2009-03-23  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #485706
	* statement.cs: Explicitly type catch type argument to pass verifier
	check.

2009-03-22  Miguel de Icaza  <miguel@novell.com>

	* driver.cs (Main): Use Environment.Exit to quit quickly and
	prevent the compiler from doing the usual wait for helper thread
	to terminate.  

	This is to prevent a slowdown that was reported by Gonzalo on
	ASP.NET 

2009-03-19  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs: Load build-in types directly instead of accessing
	an internal field.

2009-03-18  Marek Safar  <marek.safar@gmail.com>

	* ecore.cs: Always use unbox.any when available.

2009-03-18  Marek Safar  <marek.safar@gmail.com>

	* class.cs: Always set TypeAttributes.BeforeFieldInit conditionally.

2009-03-17  Marek Safar  <marek.safar@gmail.com>

	* generic.cs: Removed obsolete version of type inference.

2009-03-16  Marek Safar  <marek.safar@gmail.com>
